<resources>
    <string name="app_name">app</string>
    <string name="like_email_address_name">Like email address, name,</string>
    <string name="your_posts">Your Posts</string>
    <string name="geaar">geaar</string>
    <string name="settings">Settings</string>
    <string name="personal_details">Personal Details</string>
    <string name="find_and_modify_your_details">Find and modify your details</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="see_your_likes_comments">See your likes, comments,</string>
    <string name="ranking_and_more">ranking, and more</string>
    <string name="promote_users_add_new">Promote users, add new</string>
    <string name="restaurants_or_street_food">Restaurants or street food</string>
    <string name="stars">stars</string>
    <string name="profile_picture_and_more">profile picture, and more</string>
    <string name="settings_gear">settings gear</string>
    <string name="restaurants">Restaurants</string>
    <string name="restaurantsw">Restaurants</string>
    <string name="rank">Rank</string>
    <string name="new_locations_and">New locations and</string>
    <string name="delicious_food_with">Delicious food with</string>
    <string name="restaurants__added_every_day">restaurants added every day</string>
    <string name="useful_links">Useful links</string>
    <string name="explore">Explore</string>
    <string name="restaurants_added_every_day">restaurants added every day</string>
    <string name="new_locations_and_">New locations and</string>
    <string name="wellcome_to_foodies_dashboard">Wellcome to Foodies Dashboard</string>
    <string name="first_naame">First Name</string>
    <string name="logwin">Login</string>
    <string name="settings_icon">Settings</string>
    <string name="street_food">Street Food</string>
    <string name="flavoured_asian_spices">flavoured asian spices</string>
    <string name="explore_second">Explore</string>
    <string name="find_and_edit">Find and edit</string>
    <string name="your_personal_details">your personal details</string>
    <string name="settings_second">Settings</string>
    <string name="icon_restaurant">icon restaurant</string>
    <string name="icon_user">icon user</string>
    <string name="icon_restaurant_second">icon restaurant</string>
    <string name="icon_street_food">icon street food</string>
    <string name="add_place">add place</string>
    <string name="add_place_another">add another place</string>
    <string name="gears_icon">gears icon</string>
    <string name="food_critic_panel">Food Critic Panel</string>
    <string name="see_edit_your_ratings">See, edit your ratings</string>
    <string name="menu_rest">menu__rest</string>
    <string name="register_page">Register page</string>
    <string name="please_type_your_details">Please type your details</string>
    <string name="foodies_for_foodies">Foodies for Foodies</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
</resources>
